# phewas

./: .bumpversion.cfg  .flake8  README.md  README.rst  setup.cfg  setup.py  tox.ini
docs/source/: conf.py  index.rst
src/bio2bel_phewas/: __init__.py  __main__.py  constants.py  phewas.py
src/bio2bel_phewascatalog/: __init__.py  __main__.py  cli.py  constants.py  manager.py  models.py  parser.py
tests/: __init__.py  cases.py  constants.py
